# ganttlet

./: .agent-status-C.json  .agent-status.json  .agent-summary.md  .editorconfig  .env.e2e  .env.example  .env.production  .gcloudignore  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.server  LICENSE  PLAN.md  README.md  TASKS.md  claude-progress.txt  docker-compose.override.example.yml  docker-compose.override.yml.example  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  rustfmt.toml  setup.sh  tsconfig.sdk.json  vite.config.ts
.claude/: settings.json  settings.local.json.example
crates/fencepost/: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/fencepost/.devcontainer/: devcontainer.json
crates/fencepost/src/: check.rs  context.rs  lib.rs  log.rs  main.rs  rule.rs  segment.rs  token.rs
crates/fencepost/src/protocol/: README.md  claude.rs  mod.rs
crates/fencepost/src/rules/: README.md  branch.rs  checkout.rs  clean.rs  cwd_enforcement.rs  interpreter.rs  mod.rs  protected_file.rs  push.rs  redirect.rs  reset.rs  rm_worktree.rs  sed_tee.rs  workspace_isolation.rs  worktree_remove.rs
crates/fencepost/tests/: README.md  binary.rs  cli.rs  cross_root.rs  integration.rs
deploy/: README.md  deploy.sh  setup.sh
docs/: TASKS.md  agent-orchestration-recommendations.md  agent-prompts.md  (+14 more)
server/: CLAUDE.md  Cargo.toml
server/src/: auth.rs  config.rs  lib.rs  main.rs  room.rs  ws.rs
server/tests/: awareness_test.rs  ws_auth_test.rs
(+575 files in other folders)
