[workspace]

[package]
name = "ganttlet-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1"] }
hyper-rustls = { version = "0.27", features = ["http1", "webpki-tokio"] }
http-body-util = "0.1"
bytes = "1"
yrs = "0.21"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
dashmap = "6"

[dev-dependencies]
tokio-tungstenite = "0.28"
